# mdc-hub

./: .gitignore  LICENSE  README.en.md  README.md  install.sh  mcp-config.json  opencode.jsonc  pyproject.toml
.github/workflows/: ci.yml  release.yml
.mdc-hub/: categories.yaml
.mdc-hub/config/: settings.yaml
.trae/: mcp.json
.trae/skills/mdc-code-scanner/: SKILL.md
.trae/skills/mdc-directory-scanner/: SKILL.md
backend/: __init__.py  ai_service.py  archiver.py  main.py  mcp_server.py  requirements.txt  scan_engine.py  scanner.py
backend/presets/: categories.yaml  providers.yaml
backend/web_dist/: index.html
backend/web_dist/assets/: abnfDiagram-VRR7QNED-BJxdYySC.js  arc-zQzdPzdd.js  architectureDiagram-ZJ3FMSHR-CZhlepZl.js  blockDiagram-677ZJIJ3-Dk3C1ibd.js  c4Diagram-LMCZKHZV-BAQTzh4R.js  channel-CfJ6OCIw.js  chunk-2Q5K7J3B-klcvPlNK.js  chunk-32BRIVSS-T5ceVblR.js  chunk-5VM5RSS4-DMHanb65.js  chunk-EX3LRPZG-Vse6_xop.js  chunk-JWPE2WC7-B6xaCg7x.js  chunk-MOJQB5TN-DJ2b9TSa.js  chunk-RYQCIY6F-DFjfh0ad.js  chunk-V7JOEXUC-BMiVD4LL.js  chunk-VR4S4FIN-9ys8dTi-.js  (+43 more)
cli/: main.py
config/: tags.yaml
examples/architecture/: component-design.md  micro-frontends.md  state-management.md
examples/tooling/: mdc-spec.md  vite-config.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.vue
scripts/: mcp-entry.sh
skills/mdc-code-scanner/: SKILL.md
skills/mdc-directory-scanner/: SKILL.md
skills/mdc-doc-scanner/: SKILL.md
skills/mdc-excel-scanner/: SKILL.md
skills/mdc-media-scanner/: SKILL.md
(+16 files in other folders)
